# sentiment-analysis-cdk-rust

./: .gitignore  README.md  cdk.json  package-lock.json  package.json
lambda/medical-entity-extractor/: Cargo.toml  Makefile.toml
lambda/medical-entity-extractor/src/: main.rs
lambda/sentiment_analysis/: Cargo.toml  Makefile.toml
lambda/sentiment_analysis/src/: main.rs
lib/: medical_comprehend_cdk_rust-stack.ts  sentiment_analysis_cdk_rust-stack.ts
test/: sentiment_analysis_cdk_rust.test.ts
