[package]
name = "medical_entity_extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-sdk-comprehendmedical = "1.40.0" 
lambda_runtime = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
aws-types = "1.3.3"
aws-config = "1.5.5"
cargo-make = "0.35.6"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
