[package]
name = "sentiment_analysis"
version = "0.1.0"
edition = "2018"

[dependencies]
aws-sdk-comprehend = "1.39.0"
lambda_runtime = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
aws-types = "1.3.3"
aws-config = "1.5.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
cargo-make = "0.37.16"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

